--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             </div>
             <div class="form-group">
               <label for="ano">Ano de Lançamento*:</label>
-              <input type="text" id="ano" name="ano" class="form-control" required>
+              <input type="number" min="1900" max="2200" id="ano" name="ano" class="form-control" required>
             </div>
             <div class="form-group">
               <label for="episodios">Episodios:</label>
-              <input type="text" id="episodios" name="episodios" class="form-control">
+              <input type="number" min="1" id="episodios" name="episodios" class="form-control">
             </div>
             <div class="form-group">
               <label for="generos">Gêneros*:</label>
@@ -46,7 +46,7 @@
             </div>
             <div class="form-group">
               <label for="score">Score:</label>
-              <input type="text" id="score" name="score" class="form-control">
+              <input type="number" mix="0" mix="10" id="score" name="score" class="form-control">
             </div>
             <div class="form-group">
               <label for="image">Imagem:</label>
