--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             </div>
             <div class="form-group">
               <button id="btnSalvar" class="btn btn-primary">Cadastrar</button>
+              <button id="btnCancelar" class="btn btn-danger" style="display: none;">Cancelar</button>
             </div>
           </div>
           <div class="col-md-6">
