--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             <div class="form-group">
               <label for="generos">Gêneros*:</label>
-              <input type="text" id="generos" name="generos" class="form-control">
+              <input placeholder="Ação, Romance" type="text" id="generos" name="generos" class="form-control">
             </div>
             <div class="form-group">
               <label for="categoria">Categoria*:</label><br>
@@ -71,7 +71,7 @@
     <footer>
       <ul class="footer">
         <li><p>&copy; 2021 - CadNime</p></li>
-        <li><a href="https://github.com/Bielgomes" target="_blank"><img src="https://media.discordapp.net/attachments/813800811745247283/903127589332332574/pngegg.png" alt="Github Icon" width="65px"></a></li>
+        <li><a href="https://github.com/Bielgomes/projeto-programacao-scripts" target="_blank"><img src="https://media.discordapp.net/attachments/813800811745247283/903127589332332574/pngegg.png" alt="Github Icon" width="65px"></a></li>
       </ul>
     </footer>
   </body>
